--- a/res/layout-v21/activity_pin_lock.xml
+++ b/res/layout-v21/activity_pin_lock.xml
@@ -137,6 +137,26 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
     </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/alphanumeric_pin_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/unlock_text_view"
+        android:background="@color/white"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" 
+        android:visibility="gone">
+        
+        <EditText
+            android:id="@+id/alphanumeric_text"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center_horizontal"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword" />
+        
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/warning_layout"
@@ -163,15 +183,39 @@
             android:textColor="@color/black" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/button_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_below="@id/warning_layout"
-        android:fontFamily="sans-serif-medium"
-        android:textColor="@color/accentColor"
-        android:textSize="14sp" />
+    <RelativeLayout
+	    android:id="@+id/buttons_layout"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_centerHorizontal="true"
+	    android:layout_below="@id/warning_layout"
+	    android:background="@color/white">
+        
+	    <TextView
+	        android:id="@+id/button_logout"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="left"
+	        android:layout_alignParentLeft="true"
+	        android:gravity="left"
+	        android:fontFamily="sans-serif-medium"
+	        android:textColor="@color/accentColor"
+	        android:textSize="14sp" />
+	    
+	     <TextView
+	        android:id="@+id/button_enter"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_toRightOf="@id/button_logout"
+	        android:layout_alignParentRight="true"
+	        android:layout_gravity="right"
+	        android:gravity="right"
+	        android:fontFamily="sans-serif-medium"
+	        android:textColor="@color/accentColor"
+	        android:textSize="14sp"
+	        android:visibility="gone" />
+     
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/red_layout"
