--- a/res/layout-v21/activity_pin_lock.xml
+++ b/res/layout-v21/activity_pin_lock.xml
@@ -12,7 +12,7 @@
 
     <android.support.design.widget.CoordinatorLayout
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:id="@+id/myCoordinatorLayout"
     android:layout_alignParentTop="true"
     android:layout_alignParentLeft="true"
