--- a/res/layout-v21/activity_pin_lock.xml
+++ b/res/layout-v21/activity_pin_lock.xml
@@ -204,9 +204,8 @@
 	    
 	     <TextView
 	        android:id="@+id/button_enter"
-	        android:layout_width="wrap_content"
+	        android:layout_width="80dp"
 	        android:layout_height="wrap_content"
-	        android:layout_toRightOf="@id/button_logout"
 	        android:layout_alignParentRight="true"
 	        android:layout_gravity="right"
 	        android:gravity="right"
