--- a/app/src/main/res/layout/item_offline_grid.xml
+++ b/app/src/main/res/layout/item_offline_grid.xml
@@ -40,6 +40,7 @@
 	        android:layout_height="wrap_content"	
 	        android:paddingLeft="6dp"
 	        android:paddingTop="3dp"
+			android:textColor="@color/file_list_first_row"
 	        android:layout_below="@id/offline_grid_separator1" />
         
         <TextView
@@ -152,6 +153,7 @@
 	        android:layout_height="wrap_content"	
 	        android:paddingLeft="6dp"
 	        android:paddingTop="3dp"
+			android:textColor="@color/file_list_first_row"
 	        android:layout_below="@id/offline_grid_separator2" />
         
         <TextView
