--- a/app/src/main/res/layout/item_offline_list.xml
+++ b/app/src/main/res/layout/item_offline_list.xml
@@ -26,6 +26,7 @@
         android:layout_width="225dp"
         android:layout_height="30dp"
         android:layout_toRightOf="@id/offline_list_thumbnail"
+        android:textColor="@color/file_list_first_row"
         android:paddingLeft="3dp"
         android:paddingTop="7dp"
         android:singleLine="false" />
