--- a/app/src/main/res/layout-v21/activity_file_link.xml
+++ b/app/src/main/res/layout-v21/activity_file_link.xml
@@ -15,121 +15,144 @@
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         tools:context=".FileLinkActivityLollipop" />
 
-    <RelativeLayout
-        android:id="@+id/file_link_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbar_file_link"
-        android:gravity="left"
-        android:orientation="vertical" >
-
-  <!--  <ImageView
-            android:id="@+id/"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter" /> -->     
-        
-    	<ImageView
-             android:id="@+id/file_link_icon"
-             android:layout_width="wrap_content"
-             android:layout_height="200dp" />
-
-        <TextView
-            android:id="@+id/file_link_name"
-            android:layout_below="@id/file_link_icon"
-            android:textColor="@color/black"
-            android:fontFamily="sans-serif-medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <View
-            android:id="@+id/separator_1"
-            android:layout_width="fill_parent"
-            android:layout_height="1dip"
-            android:layout_below="@id/file_link_name"
-            android:background="@color/separator_grey"/>
-
-        <!-- SIZE LAYOUT -->
-
-        <LinearLayout
-            android:id="@+id/file_link_size_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/separator_1"
-            android:gravity="left"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/file_link_size_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/info_ic" />
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="left" >
-
-                <TextView
-                    android:id="@+id/file_link_info_menu_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/file_properties_info_size_file"
-                    android:textColor="@color/black"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/file_link_size"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/file_link_info_menu_size"
-                    android:textColor="@color/file_properties_info_menu" />
-            </RelativeLayout>
-        </LinearLayout>
-
-        <View
-            android:id="@+id/separator_2"
-            android:layout_width="fill_parent"
-            android:layout_below="@id/file_link_size_layout"
-            android:layout_height="1dip"
-            android:background="@color/separator_grey"/>
-    </RelativeLayout>
-
     <LinearLayout
         android:id="@+id/options_file_link_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" 
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
         android:gravity="right"
-        android:orientation="horizontal" >  
-        
-       <TextView
+        android:orientation="horizontal" >
+
+        <TextView
             android:id="@+id/file_link_button_download"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fontFamily="sans-serif-medium"
-            android:gravity="center_vertical|center_horizontal"
             android:textColor="@color/accentColor"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:gravity="center_vertical"/>
 
         <TextView
             android:id="@+id/file_link_button_import"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fontFamily="sans-serif-medium"
-            android:gravity="center_vertical|center_horizontal"
             android:textColor="@color/accentColor"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:gravity="center_vertical"/>
 
     </LinearLayout>
-    
-   <View
+
+    <View
         android:id="@+id/separator_3"
         android:layout_width="fill_parent"
         android:layout_height="1dip"
         android:layout_above="@id/options_file_link_layout"
         android:background="@color/separator_grey" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar_file_link"
+        android:layout_above="@id/separator_3"
+        android:id="@+id/file_link_scroll_relative">
+
+    <ScrollView
+        android:id="@+id/file_link_scroll_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/file_link_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:orientation="vertical" >
+
+      <!--  <ImageView
+                android:id="@+id/"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter" /> -->
+
+            <ImageView
+                 android:id="@+id/file_link_icon"
+                 android:layout_width="wrap_content"
+                 android:layout_height="200dp" />
+
+            <TextView
+                android:id="@+id/file_link_name"
+                android:layout_below="@id/file_link_icon"
+                android:textColor="@color/black"
+                android:fontFamily="sans-serif-medium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <View
+                android:id="@+id/separator_1"
+                android:layout_width="fill_parent"
+                android:layout_height="1dip"
+                android:layout_below="@id/file_link_name"
+                android:background="@color/separator_grey"/>
+
+            <!-- SIZE LAYOUT -->
+
+            <LinearLayout
+                android:id="@+id/file_link_size_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/separator_1"
+                android:gravity="left"
+                android:orientation="horizontal" >
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/file_link_size_image"
+                        style="@style/dialogActionButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/info_ic"
+                        android:layout_centerVertical="true"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="left" >
+
+                    <TextView
+                        android:id="@+id/file_link_info_menu_size"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/file_properties_info_size_file"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/file_link_size"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/file_link_info_menu_size"
+                        android:textColor="@color/file_properties_info_menu" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <View
+                android:id="@+id/separator_2"
+                android:layout_width="fill_parent"
+                android:layout_below="@id/file_link_size_layout"
+                android:layout_height="1dip"
+                android:background="@color/separator_grey"/>
+
+        </RelativeLayout>
+    </ScrollView>
+
+    </RelativeLayout>
+
 
 </RelativeLayout>
