--- a/app/src/main/res/layout-v21/activity_tour.xml
+++ b/app/src/main/res/layout-v21/activity_tour.xml
@@ -1,10 +1,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroll_view_tour"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_secondary"
-    tools:context=".LoginActivityLollipop" >
+    tools:context=".LoginActivityLollipop">
 
     <LinearLayout
         android:layout_width="match_parent"
