--- a/app/src/main/res/layout/panel_get_link.xml
+++ b/app/src/main/res/layout/panel_get_link.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/sortby_dialog_layout"
@@ -19,8 +17,7 @@
             android:ellipsize="marquee"
             android:gravity="center_vertical"
             android:text="@string/option_link_without_key"
-            android:textColor="@color/name_my_account"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
+            android:textColor="@color/name_my_account"/>
 
         <CheckedTextView
             android:id="@+id/link_decryption_key"
@@ -30,8 +27,7 @@
             android:ellipsize="marquee"
             android:gravity="center_vertical"
             android:text="@string/option_decryption_key"
-            android:textColor="@color/name_my_account"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
+            android:textColor="@color/name_my_account"/>
 
         <CheckedTextView
             android:id="@+id/link_with_key"
@@ -41,8 +37,7 @@
             android:ellipsize="marquee"
             android:gravity="center_vertical"
             android:text="@string/option_full_link"
-            android:textColor="@color/name_my_account"
-            android:textAppearance="?android:attr/textAppearanceMedium"/>
+            android:textColor="@color/name_my_account"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -85,11 +80,10 @@
             android:layout_height="wrap_content"
             android:textColor="@color/accentColor"
             android:layout_centerVertical="true"
-            android:paddingRight="12dp"
-            android:text="DATE"
             android:stateListAnimator="@null"
             android:elevation="0dp"
-            android:background="@color/white"/>
+            android:background="@color/white"
+            android:visibility="invisible"/>
 
 
         <TextView
