--- a/app/src/main/res/drawable/background_item_grid.xml
+++ b/app/src/main/res/drawable/background_item_grid.xml
@@ -1,5 +1,5 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:bottom="1dp" android:left="1dp" android:right="1dp" android:top="1dp">
+    <item>
          <shape android:shape="rectangle">
          	<solid android:color="#ffffff"/>
          	<corners android:bottomRightRadius="5dp" android:bottomLeftRadius="5dp"    android:topLeftRadius="5dp" android:topRightRadius="5dp"/>
