--- a/app/src/main/res/layout-v21/item_contact_grid.xml
+++ b/app/src/main/res/layout-v21/item_contact_grid.xml
@@ -17,20 +17,16 @@
         
         <RelativeLayout
 			android:id="@+id/contact_grid_relative_layout_avatar"
-			android:layout_width="157dp"
-		    android:layout_height="157dp"
-		    android:layout_centerHorizontal="true"
-		    android:paddingTop="5dp"
-		    android:paddingBottom="5dp"
-		    android:layout_marginLeft="5dp"
-		    android:layout_marginTop="5dp"
-		    android:layout_marginRight="5dp">
+			android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+			android:background="@color/new_background_fragment">
 		
 		    <ImageView 
 			    android:id="@+id/contact_grid_thumbnail"
-			    android:layout_width="157dp"
-			    android:layout_height="157dp"
-			    android:scaleType="fitCenter"/>
+			    android:layout_width="172dp"
+			    android:layout_height="172dp"
+				android:layout_centerInParent="true"
+				android:gravity="center_horizontal|center_vertical"/>
 		    
 		    <TextView
 		        android:id="@+id/contact_grid_initial_letter"
@@ -40,23 +36,16 @@
 	    
 	    </RelativeLayout>
 
-        <View
-	        android:id="@+id/contact_grid_separator"
-	 		android:layout_width="match_parent"
-	 		android:layout_height="1dp"
-	 		android:background="@color/grid_item_separator"
-	        android:layout_below="@id/contact_grid_relative_layout_avatar" />
-
-        <ImageButton 
+        <ImageButton
 	        android:id="@+id/contact_grid_three_dots"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:src="@drawable/ic_dots_vertical_grey"
-	        android:layout_below="@id/contact_grid_separator"
-			android:background="@null" 
+	        android:layout_below="@id/contact_grid_relative_layout_avatar"
+			android:background="@null"
 	        android:paddingLeft="2dp"
 	        android:paddingRight="8dp"
-	        android:paddingTop="22dp"
+	        android:paddingTop="18dp"
 	        android:layout_alignParentRight="true"/>
         
         <TextView
@@ -64,22 +53,23 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
-	        android:layout_below="@id/contact_grid_separator"
+	        android:layout_below="@id/contact_grid_relative_layout_avatar"
 	        android:layout_marginLeft="12dp"
-	        android:layout_marginTop="15dp"
+	        android:layout_marginTop="10dp"
 	        android:layout_toLeftOf="@id/contact_grid_three_dots"
-			android:textColor="@color/black"
+			android:textColor="@color/name_my_account"
 	        android:ellipsize="end"
-        	android:maxLines="1" />
+			android:textSize="16sp"
+			android:maxLines="1" />
         
         <TextView
 	        android:id="@+id/contact_grid_content"
 	        android:layout_width="wrap_content"
-	        android:layout_height="30dp"
+	        android:layout_height="wrap_content"
 			android:layout_alignParentLeft="true"
-	        android:layout_marginBottom="7dp"
+	        android:layout_marginBottom="12dp"
 	        android:layout_marginLeft="12dp"
-	        android:textColor="@color/contact_list_second_row"
+	        android:textColor="@color/mail_my_account"
 	        android:layout_below="@id/contact_grid_name"
 	        android:textSize="12sp" />  
     </RelativeLayout>       
