--- a/app/src/main/res/layout-v21/item_contact_incom_request_list.xml
+++ b/app/src/main/res/layout-v21/item_contact_incom_request_list.xml
@@ -17,7 +17,7 @@
 	         android:layout_width="fill_parent"
 	         android:layout_height="fill_parent" 
 	         android:scaleType="fitCenter"         
-	         rounded:corner_radius="27dp" 
+	         rounded:corner_radius="20dp"
 	         rounded:border_width="0dp"
 	         android:layout_centerInParent="true"
 	         rounded:border_color="@color/border_file_properties"/>
@@ -25,9 +25,10 @@
 	    <TextView
 	        android:id="@+id/contact_request_list_initial_letter"
 	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent" 
-	        android:layout_marginLeft="10dp"
-            android:layout_marginTop="-5dp" />
+	        android:layout_height="fill_parent"
+			android:layout_centerInParent="true"
+			android:gravity="center_horizontal|center_vertical"
+			android:paddingBottom="3dp" />
 	    
     </RelativeLayout>
         
